Commit after ep 11

--- a/src/main/resources/assets/letsmodreboot/lang/en_US.lang
+++ b/src/main/resources/assets/letsmodreboot/lang/en_US.lang
@@ -1,3 +1,5 @@
 item.letsmodreboot:mapleLeaf.name=Maple Leaf of Awesomeness
 
 tile.letsmodreboot:flag.name=Canadian Flag of Awesomeness
+
+itemGroup.letsmodreboot=Let's Mod Reboot
